rules/ensure_network_policy_configured_in_labels/test/success_pod_cilium_label_match/input/cilium_network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: my-cilium-pod
  ingress: []
  egress: []
