rules/ensure_network_policy_configured_in_labels/test/success_pod_cilium_label_match/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-cilium-pod
  namespace: default
  labels:
    app: my-cilium-pod
spec:
  containers:
  - name: my-app
    image: my-app:1.0.0
